# mm32G001-blink

./: CMakeLists.txt  README.md  pyocd.yaml
Core/Inc/: gpio_led_toggle.h  main.h  mm32g0001_it.h  platform.h  tim3_hall.h
Core/Src/: gpio_led_toggle.c  main.c  mm32g0001_it.c  platform.c  tim3_hall.c
Drivers/CMSIS/Core/: mm32_device.h  mm32g0001.h  reg_adc.h  reg_crc.h  reg_dbg.h  reg_exti.h  reg_flash.h  reg_gpio.h  reg_i2c.h  reg_iwdg.h  reg_pwr.h  reg_rcc.h  reg_spi.h  reg_syscfg.h  reg_tim.h  reg_usart.h
Drivers/CMSIS/Core/Inc/: cmsis_compiler.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h
Drivers/HAL_Lib/Inc/: hal_adc.h  hal_conf.h  hal_crc.h  hal_dbg.h  hal_exti.h  hal_flash.h  hal_gpio.h  hal_i2c.h  hal_iwdg.h  hal_misc.h  hal_pwr.h  hal_rcc.h  hal_spi.h  hal_syscfg.h  hal_tim.h  hal_uid.h  hal_usart.h
Drivers/HAL_Lib/Src/: hal_adc.c  hal_crc.c  hal_dbg.c  hal_exti.c  hal_flash.c  hal_gpio.c  hal_i2c.c  hal_iwdg.c  hal_misc.c  hal_pwr.c  hal_rcc.c  hal_spi.c  hal_syscfg.c  hal_tim.c  hal_uid.c  hal_usart.c
Drivers/startup/: mm32g001.ld  startup_mm32g0001_keil.S  system_mm32g0001.c
cmake/: gcc-arm-none-eabi.cmake
cmake/mm32cubemx/: CMakeLists.txt
